# Reticulum_OpenAPI

./: .gitignore  Framework_design.md  LICENSE  MANIFEST.in  README.md  TASK.md  agent.md  pyproject.toml  requirements.txt  usingOpenApi.md
docs/: Framework_design.md  api_usage_patterns.md  architecture.md  emergency_management_architecture.md  fastapi_integration.md  protocol_design.md
examples/: README.md  __init__.py
issues/: 1-http-rest-interface.md  2-plugin-architecture.md  3-version-negotiation.md  4-performance-improvements.md  5-streams-and-events.md  6-schema-discovery.md  7-schema-codegen.md
reticulum_openapi/: __init__.py  _multiprocessing_compat.py  announcer.py  client.py  codec_msgpack.py  controller.py  conversion.py  database.py  identity.py  link_client.py  link_service.py  logging.py  model.py  service.py  sqlalchemy_controller.py  status.py
rnsapi/: model.py  service.py
scripts/: run_emergency_tests.sh
templates/: README.md  client.mustache  controller.mustache  database.mustache  model.mustache  server.mustache  service.mustache
tests/: __init__.py  test_announcer.py  test_client.py  test_client_extra.py  test_codec_msgpack.py  test_controller.py  test_conversion.py  test_database_module.py  test_emergency_example.py  test_example_emergency_management.py  test_example_filmology.py  test_example_linkdemo_imports.py  test_identity.py  test_integration_webui_persistence.py  test_link_client.py  test_link_resources.py  test_link_service.py  test_logging_config.py  test_model.py  test_model_extra.py  test_persistence.py  test_service.py  (+3 more)
(+309 files in other folders)
