[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reticulum-openapi"
version = "0.1.0"
description = "Reticulum LXMF-based OpenAPI framework"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "RNS==1.0.2",
    "LXMF==0.9.2",
    "SQLAlchemy",
    "jsonschema",
    "aiosqlite",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "flake8"
]

[tool.setuptools.packages.find]
include = [
    "reticulum_openapi",
    "reticulum_openapi.*"
]
exclude = [
    "tests",
    "tests.*",
    "examples",
    "examples.*",
    "templates",
    "templates.*",
    "scripts",
    "scripts.*",
    "venv_*"
]

[tool.pytest.ini_options]
pythonpath = ["."]
